@@ -5,15 +5,18 @@ copyright_holder = Andrea Telatin
 copyright_year   = 2019
 
 #version = 0.001
-[VersionFromModule]                                                                                                                                                                                             
-                         
+[VersionFromModule]
+
 [@Basic]
 
 [Prereqs / RuntimeRequires]
-perl = 5.018
+perl = 5.014
+
+[Prereqs]
+JSON::PP = 2.27
 
 [Prereqs / TestRecommends]
-JSON::PP = 2.27
+JSON = 2.0
 
 [PodWeaver]
 [MetaJSON]          ; generate META.json (v2)
@@ -21,3 +24,4 @@ JSON::PP = 2.27
 
 [MetaResources]
 repository.url = https://github.com/telatin/bioinfo.git
+homepage       = https://metacpan.org/release/Proch-N50
