@@ -1,5 +1,6 @@
 0.050	2019-05-07
-	* Code updated
+	* Code documentation, improved
+	* Scripts updated
 
 0.040	2019-05-06
 	* PAUSE upload problem
